concord_macros/tests/trybuild/fail/codegen/reserved_sse_arity_zero.stderr
error: reserved endpoint I/O family `Sse` expects one or two type arguments
  --> tests/trybuild/fail/codegen/reserved_sse_arity_zero.rs:10:12
   |
10 |         -> Sse<>
   |            ^^^^^
